fix: 修复 CI 报错和版本号同步问题
- 添加 lint 和 build 脚本到 package.json
- 同步所有版本号到 1.0.0-alpha.1
- 修复 locales 中的硬编码版本号
- CI 现在可以正常运行所有检查

--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "description": "Claude Smart Supervisor - A minimalist Hook system to prevent Claude from being lazy",
-    "version": "3.0.0",
+    "version": "1.0.0-alpha.1",
     "commands": {
       "init": {
         "description": "Initialize Claude supervisor system",
