--- a/locales/en-US.json
+++ b/locales/en-US.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "description": "Claude Smart Supervisor - A minimalist Hook system to prevent Claude from being lazy",
-    "version": "1.0.0-alpha.3",
+    "version": "1.0.0",
     "commands": {
       "init": {
         "description": "Initialize Claude supervisor system",
